fix hero-wrap

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -56,6 +56,7 @@ a {
     position: relative;
     display: flex;
     flex-direction: column;
+    justify-content: center;
     background-color: #e6f0ff;
     height: calc(100vh - 90px);
 }
@@ -89,9 +90,6 @@ a {
     padding: 13px 16px;
     margin-left: 18px;
     border-radius: 8px;
-}
-.hero {
-    margin-top: 130px;
 }
 
 .hero .info {
